# cocotbext-ahb

./: .coveragerc  .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  log.txt  monitor.py  noxfile.py  pyproject.toml  setup.py  ship.sh
.github/workflows/: lint.yaml  python-publish.yml  run.yaml  test.yaml
cocotbext/ahb/: AhbBus.py  __init__.py  ahb_bus.py  ahb_master.py  ahb_monitor.py  ahb_slave.py  ahb_types.py  amba_ahb.py  memory.py  sparse_memory.py  utils.py
docs_utils/: template.gtkw  template_64b.gtkw  waves.gtkw
run_dir/sim_build_verilator_test_ahb_lite/: 01b8zwzj_results.xml  0idtn20l_results.xml  5rkjny3__results.xml  Vtop.cpp  Vtop.h  Vtop.mk  Vtop__ALL.d  Vtop__Syms.cpp  Vtop__Syms.h  Vtop__Trace__0.cpp  Vtop__Trace__0__Slow.cpp  Vtop___024root.h  Vtop___024root__DepSet_h84412442__0.cpp  Vtop___024root__DepSet_h84412442__0__Slow.cpp  Vtop___024root__DepSet_heccd7ead__0.cpp  Vtop___024root__DepSet_heccd7ead__0__Slow.cpp  Vtop___024root__Slow.cpp  Vtop__ver.d  Vtop_classes.mk  _m4b6x3y_results.xml  ahb_template  dump.fst  ixaakc5p_results.xml  lzpn435f_results.xml  v85bkpk__results.xml  verilated_cov.d  verilated_dpi.d  verilated_fst_c.d  verilated_vpi.d  verilator.d
tests/: const.py  test_ahb.py  test_ahb_lite.py  test_ahb_lite_log.py  test_ahb_lite_monitor_scoreboard.py  test_ahb_lite_sram.py  test_ahb_lite_sram_all_sizes.py  test_ahb_lite_sram_no_bp.py  test_ahb_lite_sram_no_errors.py  test_ahb_monitor_master.py  test_ahb_monitor_slave.py
tests/dut/: dump.v  dut.sv  dut.v
